<resources>
    <string name="app_name">CarList</string>
    <string name="app_title">Carro Elétrico</string>
    <string name="tab_title_car">Carros</string>
    <string name="tab_title_favorite">Favoritos</string>
    <string name="price_label">Preço</string>
    <string name="battery_label">Bateria</string>
    <string name="potency_label">Potência</string>
    <string name="recharge_label">Recarga</string>
    <string name="app_title_form">Calcular Autonomia</string>
    <string name="btn_calculate">Calcular</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="kwh">Preço Kwh</string>
    <string name="result">Resultado</string>
</resources>