<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".views.FormActivity">

    <TextView
        android:id="@+id/tv_title_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:text="@string/app_title_form"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_khw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_form"
        android:background="@drawable/round_border_black"
        android:padding="10dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/kwh"/>

    <EditText
        android:id="@+id/et_km"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_khw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        android:padding="10dp"
        android:layout_margin="16dp"
        android:background="@drawable/round_border_black"
        android:hint="@string/km_percorrido"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:background="@drawable/round_borders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_km"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible"
        tools:text="Resultado R$ 150.000,00"
        android:text="VAR_RESULT R$ VAR_PRICE"/>

</androidx.constraintlayout.widget.ConstraintLayout>